[package]
name = "auto-update"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.13.20"
rocket = "0.5.0-rc.1"
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
dotenv = "0.15.0"